# agentic-auth

./: .gitignore  AUTHENTICATION_ARCHITECTURE.md  AUTHENTICATION_FLOW.md  DEMO_SHOWCASE.md  DYNAMIC_REGISTRATION_REQUIREMENTS.md  README.md  SHARED_AUTH_SERVER_REQUIREMENTS.md  cleanup_demo.sh  env.example  mcp_config.toml  requirements.txt  setup_k8s_users.py  setup_keycloak_v2.py  start_demo.sh  stop_demo.sh  test_token_exchange_v2.py
auth-server/: APPROVAL_WORKFLOWS.md  README.md  TOKEN_EXCHANGE.md  __init__.py  admin_api.py  database.py  generate_keys.py  init_admin.py  main.py  unified_auth_server.py
diagrams/: README.md  asymmetric-jwt-verification.md  client-side-interception-flow.mmd  e2e-flow-overview.mmd  oauth-mcp-discovery-flow.mmd  sequence-diagram.mmd  system-overview.mmd  technical-architecture.mmd
docs-and-diagrams/: AUTHENTICATION_FLOW_CHART.md  AUTHENTICATION_STEP_BY_STEP.md  DYNAMIC_MCP_REGISTRATION_GUIDE.md  LLAMASTACK_CLIENT_TOKEN_EXCHANGE_GUIDE.md  MCP_SECURITY_ANALYSIS_AND_RECOMMENDATIONS.md  authentication-flow.mmd  authorization-token-exchange.mmd
frontend/: chat_app.py
frontend/auth-agent/: README.md  pyproject.toml
frontend/auth-agent/src/auth_agent/: agent_instance.py
frontends/: __init__.py
mcp/: APPROVAL_FLOWS.md  MCP_SERVER_AUTH_RESPONSIBILITIES.md  README.md  SCOPE_UPGRADE_FLOW.md  keycloak-mcp-readme.md  mcp_server.py  oidc_keycloak.py  security_enhancements.py  unified_auth_server.py
scripts/: create_agent.sh  demo_utils.sh  mcp_call_tool.py  mcp_k8s_oidc_demo.py  mcp_k8s_real_tool_demo.py  mcp_list_tools.py
(+41 files in other folders)
